--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <a href="https://www.linkedin.com/in/shiv-rajput/" target="_blank" class="home__social-link">
                             <i class='bx bxl-linkedin-square' ></i>
                         </a>
-                        <a href="https://github.com/shiv1-1" target="_blank" class="home__social-link">
+                        <a href="https://github.com/11shiv" target="_blank" class="home__social-link">
                             <i class='bx bxl-github' ></i>
                         </a>
                         <a href="https://discord.com/" target="_blank" class="home__social-link">
