--- a/index.html
+++ b/index.html
@@ -350,9 +350,9 @@
                     <div class="work__card mix ai">
                         <img src="/images/work3.jpg" alt="" class="work__image">
 
-                        <h3 class="work__title">weather</h3>
+                        <h3 class="work__title">weather4cast</h3>
 
-                        <a href="#" class="work__button">
+                        <a href="https://11shiv.github.io/weather4cast.github.io/" class="work__button">
                             Demo <i class='bx bx-right-arrow-alt work__icon'></i>
                         </a>
                     </div>
