--- a/index.html
+++ b/index.html
@@ -330,9 +330,9 @@
                     <div class="work__card mix web">
                         <img src="/images/work1.jpg" alt="" class="work__image">
 
-                        <h3 class="work__title">portfolio</h3>
+                        <h3 class="work__title">portfolio website</h3>
 
-                        <a href="#" class="work__button">
+                        <a href="https://11shiv.github.io/" class="work__button">
                             Demo <i class='bx bx-right-arrow-alt work__icon'></i>
                         </a>
                     </div>
