--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 
                         <h3 class="work__title">Voice Assistant</h3>
 
-                        <a href="#" class="work__button">
+                        <a href="https://github.com/11shiv/Voice-Assistant" class="work__button">
                             Demo <i class='bx bx-right-arrow-alt work__icon'></i>
                         </a>
                     </div>
