--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                 Download CV
                             </a>
 
-                            <a href="#" class="button">About me</a>
+                            <a href="#about" class="button">About me</a>
                         </div>
                     </div>
                     <div class="home__handle">
