--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
                     <div class="skills__content">
 
-                        <h3 class="skills__title">Backend Developer</h3>
+                        <h3 class="skills__title">Machine Learning</h3>
                         
                         <div class="skills__box">
 
@@ -251,8 +251,8 @@
                                     <i class='bx bxl-python' ></i>
 
                                     <div>
-                                        <h3 class="skills__name">Python</h3>
-                                        <span class="skills__level">Basics</span>
+                                        <h3 class="skills__name">Open CV</h3>
+                                        <span class="skills__level">Intermidiate</span>
                                     </div>
                                 </div>
 
@@ -260,7 +260,7 @@
                                     <i class='bx bxl-nodejs' ></i>
 
                                     <div>
-                                        <h3 class="skills__name">Nodejs</h3>
+                                        <h3 class="skills__name">Tensor Flow</h3>
                                         <span class="skills__level">Basics</span>
                                     </div>
                                 </div>
